--- a/Ziad.html
+++ b/Ziad.html
@@ -12,9 +12,11 @@
     <h2>Tshirt 1</h2>
     <img id="local-img" src="Tshirt1.jpg" alt="Local Photo" width="150">
     <p> price: 20$</p>
+    <button>Buy</button>
     <h3>Tshirt 2</h3>
     <img id="local-img" src="Tshirt2.jpg" alt="Local Photo" width="150">
     <p> price: 20$</p>
+    <button>Buy</button>
 
 
 </section>
